<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidDomInspection -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_image_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/news_image_description"
            android:elevation="6dp"
            android:layout_margin="@dimen/card_margin"
            android:scaleType="centerCrop"
            tools:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            tools:text="@string/article_title_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin">

            <TextView
                android:id="@+id/article_source_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/article_detail_source_placeholder" />

            <TextView
                android:id="@+id/published_at_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_source_tv"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/published_at_tools_text" />


            <ImageButton
                android:id="@+id/bookmark_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/baseline_bookmark_border_black_18dp"
                android:contentDescription="@string/bookmark_button_description" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>